small style changes

--- a/ui/src/styles/_navigation.scss
+++ b/ui/src/styles/_navigation.scss
@@ -1,6 +1,8 @@
 .navbar-default {
-  background: none;
-  border: none;
+  background: white;
+  // border: none;
+  box-shadow: 0px 1px 10px #dcdcdc;
+  margin-bottom: 50px;
 }
 
 .navbar-nav {
